Implemented dessert card layout by loading JSON data.

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
   }
   
   .back-button {
-    position: fixed;
+    position: absolute;
     top: 10px;
     right: 10px;
     background-color: #333;
