--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@
   height: 100vh;
   background: #000000;
   transform-origin: bottom;
+  z-index: 9;
 }
 
 .slide-out {
@@ -66,4 +67,5 @@
   height: 100vh;
   background: #000000;
   transform-origin: top;
+  z-index: 10;
 }
