--- a/src/components/header/Nav/Nav.css
+++ b/src/components/header/Nav/Nav.css
@@ -4,12 +4,17 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+
   .body {
     display: flex;
     gap: 10px;
     flex-direction: column;
+
     .linkContainer {
+      perspective: 120px;
+      perspective-origin: left;
     }
+
     a {
       color: black;
       text-decoration: none;
