--- a/src/Pages/Submissions/TipsCalculator/TipsCalculator.css
+++ b/src/Pages/Submissions/TipsCalculator/TipsCalculator.css
@@ -4,6 +4,11 @@
   font-family: 'Space Mono', sans-serif;
 }
 
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .SpaceMono input::placeholder {
   color: #5b7874;
 }
